# django-rag-chatbot

./: .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml
config/: .env.template
docker/: docker-compose.prod.yml
docker/django/: Dockerfile
docs/: Makefile
scripts/: create_dev_database.sql
server/: urls.py
server/apps/chatbot/: apps.py  choices.py  constants.py  exceptions.py  forms.py  managers.py  services.py  urls.py  utils.py  views.py  views_stream.py
server/apps/chatbot/admin/: conversation.py  message.py
server/apps/chatbot/logic/: chat.py  homepage.py
server/apps/chatbot/migrations/: 0001_initial.py  0002_delete_document.py  0002_initial.py  0003_conversation_documents.py
server/apps/chatbot/models/: conversation.py  message.py
server/apps/chatbot/static/chatbot/css/: chat.css
server/apps/chatbot/templates/chatbot/: chat.html  homepage.html
server/apps/core/: http.py  models.py
server/apps/core/admin/: base.py
server/apps/django_docs_rag/: admin.py  ai_assistants.py  apps.py  models.py
server/apps/django_docs_rag/management/commands/: fetch_django_docs.py
server/apps/documents/: apps.py  choices.py  configuration.py  embeddings.py  ingest.py  prompting.py  retriever.py  tasks.py  urls.py
server/apps/documents/admin/: __init__.py  document.py  document_chunk.py
server/apps/documents/logic/: document_create.py  document_delete.py  document_edit.py  document_list.py
server/apps/documents/migrations/: 0001_initial.py  0002_create_vector_extension.py  0003_document_processed_at_document_status_documentchunk.py
server/apps/documents/models/: document.py  document_chunk.py
server/apps/documents/templates/documents/: document_confirm_delete.html  document_form.html  document_list.html
server/apps/main/: views.py
server/apps/main/templates/main/: index.html
server/apps/users/: ai_assistants.py  choices.py  constants.py
server/apps/users/migrations/: 0001_initial.py
server/apps/users/models/: profile.py  user.py
server/settings/components/: common.py
server/settings/environments/: development.py
server/templates/: base.html
server/templates/common/txt/: humans.txt
server/templates/partials/: _base_head_style.html
